# AI-therapist

./: .gitignore  frontend.py  main.py  pyproject.toml
backend/: ai_agent.py  config.py  main.py  tools.py
