[project]
name = "ai-therapist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.2",
    "langchain>=1.0.7",
    "langchain-openai>=1.0.3",
    "langgraph>=1.0.3",
    "ollama>=0.6.1",
    "pydantic>=2.12.4",
    "requests>=2.32.5",
    "streamlit>=1.51.0",
    "twilio>=9.8.6",
    "uvicorn>=0.38.0",
]
